ch04/section_2/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx 
    spec:
      containers:
        - name: nginx
          image: nginx
          volumeMounts:
            - name: users-volume
              mountPath: /users.json
      volumes:
        - name: users-volume
          secret:
            secretName: user-file
